Fix nav on firefox

--- a/css/style-desktop.css
+++ b/css/style-desktop.css
@@ -251,7 +251,7 @@
         display: block;
         top: 11em;
         left: 50%;
-        width: 642px;
+        width: 645px;
         text-align: center;
         margin-left: -321px;
     }
